--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,31 @@
 {
-    "name": "laravellegends/pt-br-validator",
+    "name": "andcarpi/pt-br-validator",
     "description": "Uma biblioteca contendo validações de formatos Brasileiros, para o Laravel 5",
-    "license" : "MIT",
+    "license": "MIT",
     "authors": [
         {
-            "name": "Wallace de Souza Vizerra",
-            "email": "wallacemaxters@gmail.com"
+            "name": "Anderson Carpi",
+            "email": "kustelac@yahoo.com.br"
         }
     ],
     "require": {
-        "illuminate/support": "5.0.* || 5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.*"
+        "illuminate/support": "5.0.* || 5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.*"
     },
     "autoload": {
         "psr-4": {
-            "LaravelLegends\\PtBrValidator\\": "src/pt-br-validator"
+            "andcarpi\\PtBrValidator\\": "src/pt-br-validator"
         }
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "orchestra/testbench": "3.1.*",
-        "phpunit/phpunit": "4.8.*"
+        "orchestral/testbench": "^3.1.*",
+        "phpunit/phpunit": "^4.8.*"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "andcarpi\\PtBrValidator\\ValidatorProvider"
+            ]
+        }
     }
 }
