--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "andcarpi\\PtBrValidator\\": "src/pt-br-validator"
+            "andcarpi\\pt-br-validator\\": "src/pt-br-validator"
         }
     },
     "minimum-stability": "stable",
